--- a/index.html
+++ b/index.html
@@ -323,7 +323,81 @@
           </div>
         </div>
       </section>
-      <section style="height: 100vh; background-color: red"></section>
+      <section class="creation">
+        <div class="creation_inner">
+          <div class="creation_backgrounds">
+            <div class="background_initial">
+              <picture class="creation_bg">
+                <source
+                  srcset="
+                    https://images.unsplash.com/photo-1602043410209-d57816124451?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTB8fGZvcm11bGElMjAxfGVufDB8fDB8fHww
+                  "
+                  type="image/jpeg"
+                />
+                <img
+                  src="https://images.unsplash.com/photo-1602043410209-d57816124451?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTB8fGZvcm11bGElMjAxfGVufDB8fDB8fHww"
+                  alt="portfolio background"
+                  decoding="async"
+                />
+              </picture>
+            </div>
+            <div class="background_clip">
+              <picture class="creation_bg">
+                <source
+                  srcset="
+                    https://plus.unsplash.com/premium_photo-1680199304427-d2a10c5f0157?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+                  "
+                  type="image/jpeg"
+                />
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1680199304427-d2a10c5f0157?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  alt="portfolio background"
+                  decoding="async"
+                />
+              </picture>
+            </div>
+            <div class="background_last">
+              <picture class="creation_bg">
+                <source
+                  srcset="
+                    https://plus.unsplash.com/premium_photo-1661962369601-37be76489d4e?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+                  "
+                  type="image/jpeg"
+                />
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1661962369601-37be76489d4e?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  alt="portfolio background"
+                  decoding="async"
+                />
+              </picture>
+            </div>
+          </div>
+          <div class="creation_content">
+            <div class="content_initial">
+              <h2 data-split="lines">
+                Since <br />
+                its creation,
+              </h2>
+            </div>
+            <div class="content_center">
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Quibusdam minus suscipit eos exercitationem consequatur expedita
+                doloremque dolores architecto porro amet, quo magnam
+                repellendus? Consectetur aspernatur rerum reiciendis, asperiores
+                atque maiores.
+              </p>
+            </div>
+            <div class="content_end">
+              <h2>contact us</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Consequuntur tempore tempora.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="./scripts/lenis.js" defer></script>
     <script src="./scripts/gsap.js" defer></script>
