--- a/index.html
+++ b/index.html
@@ -110,61 +110,56 @@
           <div class="portfolio_blocks" data-overlay-layer>
             <div class="portfolio_block-bg">
               <picture class="portfolio_block-background slide-bg active">
-                <source srcset="./assets/hero-1.avif" type="image/avif" />
+                <source
+                  srcset="./assets/portfolio-tech.avif"
+                  type="image/avif"
+                />
                 <img
-                  src="./assets/hero-1.avif"
+                  src="./assets/portfolio-tech.avif"
                   alt="portfolio background"
                   decoding="async"
                 />
               </picture>
               <picture class="portfolio_block-background slide-bg">
                 <source
-                  srcset="
-                    https://images.unsplash.com/photo-1631392426516-affff6b1d41c?q=80&w=1288&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-                  "
-                  type="image/jpeg"
+                  srcset="./assets/portfolio-immo.avif"
+                  type="image/avif"
                 />
                 <img
-                  src="https://images.unsplash.com/photo-1631392426516-affff6b1d41c?q=80&w=1288&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  src="./assets/portfolio-immo.avif"
                   alt="portfolio background"
                   decoding="async"
                 />
               </picture>
               <picture class="portfolio_block-background slide-bg">
                 <source
-                  srcset="
-                    https://images.unsplash.com/photo-1728116693268-125c5d6ad9e2?q=80&w=1229&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-                  "
-                  type="image/jpeg"
+                  srcset="./assets/portfolio-sante.avif"
+                  type="image/avif"
                 />
                 <img
-                  src="https://images.unsplash.com/photo-1728116693268-125c5d6ad9e2?q=80&w=1229&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  src="./assets/portfolio-sante.avif"
                   alt="portfolio background"
                   decoding="async"
                 />
               </picture>
               <picture class="portfolio_block-background slide-bg">
                 <source
-                  srcset="
-                    https://images.unsplash.com/photo-1623258406180-df4c68d0798f?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-                  "
-                  type="image/jpeg"
+                  srcset="./assets/portfolio-tourisme.avif"
+                  type="image/avif"
                 />
                 <img
-                  src="https://images.unsplash.com/photo-1623258406180-df4c68d0798f?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  src="./assets/portfolio-tourisme.avif"
                   alt="portfolio background"
                   decoding="async"
                 />
               </picture>
               <picture class="portfolio_block-background slide-bg">
                 <source
-                  srcset="
-                    https://images.unsplash.com/photo-1759646849737-f2a29e01cc2c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fHw%3D
-                  "
-                  type="image/jpeg"
+                  srcset="./assets/portfolio-finance.avif"
+                  type="image/avif"
                 />
                 <img
-                  src="https://images.unsplash.com/photo-1759646849737-f2a29e01cc2c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fHw%3D"
+                  src="./assets/portfolio-finance.avif"
                   alt="portfolio background"
                   decoding="async"
                 />
@@ -328,14 +323,9 @@
           <div class="creation_backgrounds">
             <div class="background_initial">
               <picture class="creation_bg">
-                <source
-                  srcset="
-                    https://images.unsplash.com/photo-1602043410209-d57816124451?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTB8fGZvcm11bGElMjAxfGVufDB8fDB8fHww
-                  "
-                  type="image/jpeg"
-                />
+                <source srcset="./assets/about-1.avif" type="image/avif" />
                 <img
-                  src="https://images.unsplash.com/photo-1602043410209-d57816124451?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTB8fGZvcm11bGElMjAxfGVufDB8fDB8fHww"
+                  src="./assets/about-1.avif"
                   alt="portfolio background"
                   decoding="async"
                 />
@@ -343,14 +333,9 @@
             </div>
             <div class="background_clip">
               <picture class="creation_bg">
-                <source
-                  srcset="
-                    https://plus.unsplash.com/premium_photo-1680199304427-d2a10c5f0157?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-                  "
-                  type="image/jpeg"
-                />
+                <source srcset="./assets/about-2.avif" type="image/avif" />
                 <img
-                  src="https://plus.unsplash.com/premium_photo-1680199304427-d2a10c5f0157?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  src="./assets/about-2.avif"
                   alt="portfolio background"
                   decoding="async"
                 />
@@ -358,14 +343,9 @@
             </div>
             <div class="background_last">
               <picture class="creation_bg">
-                <source
-                  srcset="
-                    https://plus.unsplash.com/premium_photo-1661962369601-37be76489d4e?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-                  "
-                  type="image/jpeg"
-                />
+                <source srcset="./assets/contact.avif" type="image/avif" />
                 <img
-                  src="https://plus.unsplash.com/premium_photo-1661962369601-37be76489d4e?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  src="./assets/contact.avif"
                   alt="portfolio background"
                   decoding="async"
                 />
