feat: Add new AVIF image assets and app.css stylesheet, updating index.html to reference them.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <span data-split="lettersmix">MENU --- </span>
             <span
               ><img
-                src="/assets/logo-menu.avif"
+                src="./assets/logo-menu.avif"
                 alt="company name"
                 decoding="async"
             /></span>
